--- a/Dockerfiles/per_frame_functional_group_sequence/Dockerfile
+++ b/Dockerfiles/per_frame_functional_group_sequence/Dockerfile
@@ -1,7 +1,10 @@
-FROM python:3.11.2-slim-buster
+FROM python@sha256:5b287042a6150052420e6a7fb7c1606b6403740880897ae9610faf434da28693
 
-LABEL MAINTAINER="IDC <vthiriveedhi@mgb.org>" \
-        GIT_HASH=${GIT_HASH}
+LABEL BASE_DOCKER_IMAGE="python:3.11.2-slim-buster"\
+      MAINTAINER="IDC <vthiriveedhi@mgb.org>" \
+      GIT_HASH=${GIT_HASH}\
+      PATH_TO_DOCKER_FILE="https://github.com/imagingdatacommons/Cloud-Resources-Workflows/blob/${GIT_HASH}/Dockerfiles/per_frame_functional_group_sequence/Dockerfile"\
+      IMAGE_NAME_ON_DOCKERHUB="imagingdatacommons/inference_totalseg"
 
 RUN apt-get update && \
     apt-get install -y --no-install-recommends \
