--- a/Dockerfiles/per_frame_functional_group_sequence/Dockerfile
+++ b/Dockerfiles/per_frame_functional_group_sequence/Dockerfile
@@ -1,5 +1,7 @@
 FROM python@sha256:5b287042a6150052420e6a7fb7c1606b6403740880897ae9610faf434da28693
 
+ARG GIT_HASH
+
 LABEL BASE_DOCKER_IMAGE="python:3.11.2-slim-buster"\
       MAINTAINER="IDC <vthiriveedhi@mgb.org>" \
       GIT_HASH=${GIT_HASH}\
