--- a/.github/workflows/per_frame_functional_group_sequence.yml
+++ b/.github/workflows/per_frame_functional_group_sequence.yml
@@ -15,11 +15,15 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up Git
-        run: git config --global user.email "actions@github.com" && git config --global user.name "GitHub Actions"
+        run: |
+          git config --global user.email "actions@github.com"
+          git config --global user.name "GitHub Actions"
 
       - name: Get Git Commit Hash
         id: git-commit-hash
-        run: echo "::set-output name=commit_hash::$(git rev-parse HEAD)"
+        run: |
+          COMMIT_HASH=$(git rev-parse HEAD)
+          echo "COMMIT_HASH=$COMMIT_HASH" >> $GITHUB_ENV
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -35,4 +39,4 @@ jobs:
           push: true
           tags: imagingdatacommons/per_frame_functional_group_sequence
           build-args: |
-            GIT_HASH=${{ steps.git-commit-hash.outputs.commit_hash }}
+            GIT_HASH=$COMMIT_HASH
