--- a/.github/workflows/per_frame_functional_group_sequence.yml
+++ b/.github/workflows/per_frame_functional_group_sequence.yml
@@ -40,4 +40,4 @@ jobs:
           push: true
           tags: imagingdatacommons/per_frame_functional_group_sequence:dev
           build-args: |
-            GIT_HASH=$COMMIT_HASH
+            GIT_HASH=${COMMIT_HASH}
