--- a/.github/workflows/per_frame_functional_group_sequence.yml
+++ b/.github/workflows/per_frame_functional_group_sequence.yml
@@ -46,6 +46,27 @@ jobs:
         env:
           COMMIT_HASH: ${{ env.COMMIT_HASH }}
 
+      - name: Login to GitHub Container Registry (ghcr.io)
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build and push Docker image to GitHub Container Registry
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./Dockerfiles/per_frame_functional_group_sequence/Dockerfile
+          push: true
+          tags: ghcr.io/imagingdatacommons/per_frame_functional_group_sequence:dev
+          build-args: |
+            GIT_HASH=${{ env.COMMIT_HASH }}
+        env:
+          COMMIT_HASH: ${{ env.COMMIT_HASH }}
+
+
+
   build-and-push-prod:
     if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
@@ -77,6 +98,25 @@ jobs:
           file: ./Dockerfiles/per_frame_functional_group_sequence/Dockerfile
           push: true
           tags: imagingdatacommons/per_frame_functional_group_sequence
+          build-args: |
+            GIT_HASH=${{ env.COMMIT_HASH }}
+        env:
+          COMMIT_HASH: ${{ env.COMMIT_HASH }}
+
+      - name: Login to GitHub Container Registry (ghcr.io)
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build and push Docker image to GitHub Container Registry
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./Dockerfiles/per_frame_functional_group_sequence/Dockerfile
+          push: true
+          tags: ghcr.io/imagingdatacommons/per_frame_functional_group_sequence
           build-args: |
             GIT_HASH=${{ env.COMMIT_HASH }}
         env:
