--- a/.github/workflows/per_frame_functional_group_sequence.yml
+++ b/.github/workflows/per_frame_functional_group_sequence.yml
@@ -3,7 +3,8 @@ name: per_frame_functional_group_sequence
 on:
   pull_request:
     branches: [ "main" ]
-
+    
+jobs:
   build-and-push:
     runs-on: ubuntu-latest
     steps:
