--- a/.github/workflows/per_frame_functional_group_sequence.yml
+++ b/.github/workflows/per_frame_functional_group_sequence.yml
@@ -2,10 +2,10 @@ name: per_frame_functional_group_sequence
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
-    
+    branches: ["main"]
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -35,41 +35,32 @@ jobs:
         env:
           COMMIT_HASH: ${{ env.COMMIT_HASH }}
 
-  push-dockerhub:
-    needs: build
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-    runs-on: ubuntu-latest
-    steps:
       - name: Login to Docker Hub
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Push Docker image to Docker Hub
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          file: ./Dockerfiles/per_frame_functional_group_sequence/Dockerfile
-          push: true
-          tags: imagingdatacommons/per_frame_functional_group_sequence
-
-  push-ghcr:
-    needs: build
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-    runs-on: ubuntu-latest
-    steps:
       - name: Login to GitHub Container Registry (ghcr.io)
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Push Docker image to GitHub Container Registry
+      - name: Push Docker image to Docker Hub
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         uses: docker/build-push-action@v5
         with:
           context: .
           file: ./Dockerfiles/per_frame_functional_group_sequence/Dockerfile
           push: true
-          tags: ghcr.io/imagingdatacommons/per_frame_functional_group_sequence
+          tags: |
+            imagingdatacommons/per_frame_functional_group_sequence
+            ghcr.io/imagingdatacommons/per_frame_functional_group_sequence
+          build-args: |
+            GIT_HASH=${{ env.COMMIT_HASH }}
+        env:
+          COMMIT_HASH: ${{ env.COMMIT_HASH }}
